feat: implement delete repair request by Matin.
